--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "^6.0.2",
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
@@ -20,8 +21,13 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@swimlane/ngx-charts": "^9.0.0",
+    "angular-font-awesome": "^3.1.2",
+    "angular2-notifications": "^1.0.2",
+    "bootstrap": "^4.1.3",
     "convert-csv-to-json": "0.0.13",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "ngx-papaparse": "^2.1.4",
     "rxjs": "^6.0.0",
     "ts-xlsx": "0.0.11",
